Fix jumpy input on ios (#566)

--- a/src/host/stylesheets/iframe.less
+++ b/src/host/stylesheets/iframe.less
@@ -77,13 +77,12 @@
         }
     }
 
-    .widgetOpened {
-        body,
-        html {
+    html.widgetOpened {
+        &, body {
             @media (max-width: @screen-xs-max) {
                 overflow: hidden;
                 position: relative;
-                -webkit-overflow-scrolling: auto;
+                -webkit-overflow-scrolling: touch;
                 max-height: 100%;
                 height: 100%;
                 width: 100%;
@@ -99,8 +98,6 @@
             left: 0;
             top: 0;
             bottom: 0;
-            width: 100%;
-            height: 100%;
             max-height: 100%;
         }
         @media (min-width: @screen-sm-min) and (max-height: @screen-xs-ht-max) {
